week1/.metals/metals.log
2020.09.02 03:08:41 INFO  started: Metals version 0.9.3 in workspace '/home/taika/documents/scala_design/week1' for client vscode.
2020.09.02 03:08:42 INFO  time: initialize in 1.43s
2020.09.02 03:08:43 WARN  no build tool detected in workspace '/home/taika/documents/scala_design/week1'. The most common cause for this problem is that the editor was opened in the wrong working directory, for example if you use sbt then the workspace directory should contain build.sbt. 
2020.09.02 03:08:43 INFO  no build target: using presentation compiler with only scala-library
2020.09.02 03:08:45 WARN  no build target for: /home/taika/documents/scala_design/week1/generators.sc
Sep 02, 2020 3:09:25 AM org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
WARNING: Unmatched cancel notification for request id 76
2020.09.02 03:11:02 WARN  no build target for: /home/taika/documents/scala_design/week1/generators.sc
2020.09.02 03:12:00 WARN  no build target for: /home/taika/documents/scala_design/week1/generators.sc
2020.09.02 03:12:32 WARN  no build target for: /home/taika/documents/scala_design/week1/generators.sc
2020.09.02 03:13:02 WARN  no build target for: /home/taika/documents/scala_design/week1/generators.sc
2020.09.02 03:13:16 WARN  no build target for: /home/taika/documents/scala_design/week1/generators.sc
2020.09.02 03:13:28 WARN  no build target for: /home/taika/documents/scala_design/week1/generators.sc
2020.09.02 03:13:43 WARN  no build target for: /home/taika/documents/scala_design/week1/generators.sc
2020.09.02 03:14:37 WARN  no build target for: /home/taika/documents/scala_design/week1/generators.sc
2020.09.02 03:14:58 WARN  no build target for: /home/taika/documents/scala_design/week1/generators.sc
2020.09.02 03:16:12 ERROR scalafmt: /home/taika/documents/scala_design/week1/generators.sc:29: error: } expected but <- found
}yieldlistdefemptyLists=single(Nil)defnonEmptyLists=for{head<-integerstail<-lists}yieldhead::tail
                                                                          ^
2020.09.02 03:16:12 WARN  no build target for: /home/taika/documents/scala_design/week1/generators.sc
2020.09.02 03:16:35 WARN  no build target for: /home/taika/documents/scala_design/week1/generators.sc
2020.09.02 03:16:43 WARN  no build target for: /home/taika/documents/scala_design/week1/generators.sc
2020.09.02 03:16:46 WARN  no build target for: /home/taika/documents/scala_design/week1/generators.sc
Sep 02, 2020 3:17:07 AM scala.meta.internal.pc.CompletionProvider expected$1
WARNING: offset 860, count -1, length 959
2020.09.02 03:17:10 WARN  no build target for: /home/taika/documents/scala_design/week1/generators.sc
2020.09.02 03:18:42 WARN  no build target for: /home/taika/documents/scala_design/week1/generators.sc
2020.09.02 03:18:50 WARN  no build target for: /home/taika/documents/scala_design/week1/generators.sc
2020.09.02 03:19:45 WARN  no build target for: /home/taika/documents/scala_design/week1/generators.sc
2020.09.02 03:19:55 WARN  no build target for: /home/taika/documents/scala_design/week1/generators.sc
2020.09.02 03:19:55 WARN  no build tool detected in workspace '/home/taika/documents/scala_design/week1'. The most common cause for this problem is that the editor was opened in the wrong working directory, for example if you use sbt then the workspace directory should contain build.sbt. 
2020.09.02 03:20:20 WARN  no build target for: /home/taika/documents/scala_design/week1/generators.sc
2020.09.02 03:21:14 WARN  no build target for: /home/taika/documents/scala_design/week1/generators.sc
2020.09.02 03:21:21 WARN  no build target for: /home/taika/documents/scala_design/week1/generators.sc
Sep 02, 2020 3:21:24 AM org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
WARNING: Unmatched cancel notification for request id 3098
2020.09.02 03:24:46 WARN  no build target for: /home/taika/documents/scala_design/week1/generators.sc
2020.09.02 03:25:08 WARN  no build target for: /home/taika/documents/scala_design/week1/generators.sc
2020.09.02 03:25:28 WARN  no build tool detected in workspace '/home/taika/documents/scala_design/week1'. The most common cause for this problem is that the editor was opened in the wrong working directory, for example if you use sbt then the workspace directory should contain build.sbt. 
2020.09.02 03:25:28 WARN  no build target for: /home/taika/documents/scala_design/week1/generators.sc
2020.09.02 03:27:47 WARN  no build target for: /home/taika/documents/scala_design/week1/generators.sc
2020.09.02 03:28:07 WARN  no build target for: /home/taika/documents/scala_design/week1/generators.sc
2020.09.02 03:28:23 WARN  no build target for: /home/taika/documents/scala_design/week1/generators.sc
something's wrong: no file:///home/taika/documents/scala_design/week1/generators.sc in this.Generator[S]RangePosition(file:///home/taika/documents/scala_design/week1/generators.sc, 121, 121, 133)
2020.09.02 03:29:35 WARN  no build tool detected in workspace '/home/taika/documents/scala_design/week1'. The most common cause for this problem is that the editor was opened in the wrong working directory, for example if you use sbt then the workspace directory should contain build.sbt. 
2020.09.02 03:29:35 WARN  no build target for: /home/taika/documents/scala_design/week1/generators.sc
2020.09.02 03:30:00 WARN  no build target for: /home/taika/documents/scala_design/week1/generators.sc
something's wrong: no file:///home/taika/documents/scala_design/week1/generators.sc in this.Generator[S]RangePosition(file:///home/taika/documents/scala_design/week1/generators.sc, 1230, 1230, 1242)
something's wrong: no file:///home/taika/documents/scala_design/week1/generators.sc in this.Generator[S]RangePosition(file:///home/taika/documents/scala_design/week1/generators.sc, 1230, 1230, 1242)
2020.09.02 03:30:57 WARN  no build target for: /home/taika/documents/scala_design/week1/generators.sc
2020.09.02 03:33:18 WARN  no build target for: /home/taika/documents/scala_design/week1/generators.sc
2020.09.02 04:03:48 INFO  shutting down Metals
